--- a/index.html
+++ b/index.html
@@ -23,5 +23,7 @@
         </section>
         <section id="gameBoard"></section>
     </div>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
